Fix font rendering on FireFox

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -24,7 +24,7 @@ html,body
   left: 0
   right:0
   bottom: 0
-  font-family: 'helvetica neue' 'helvetica'
+  font-family: 'helvetica neue', 'helvetica'
   letter-spacing: 2px
   font-size: 24px
   height: 80px
